--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,23 +1,42 @@
+---
+import "../assets/fonts/array/index.css"; // Array
+---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" href="/favicon.ico" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
-</html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" href="/favicon.ico" />
+
+    <title>Mikkel ALMONTE--RINGAUD</title>
+    <meta name="title" content="Mikkel ALMONTE--RINGAUD" />
+    <meta name="description" content="Mikkel ALMONTE--RINGAUD's Portfolio" />
+    <link rel="canonical" href="https://www.vexcited.com/" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.vexcited.com/" />
+    <meta property="og:title" content="Mikkel ALMONTE--RINGAUD" />
+    <meta
+      property="og:description"
+      content="Mikkel ALMONTE--RINGAUD's Portfolio"
+    />
+    <meta property="og:image" content="/og.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.vexcited.com/" />
+    <meta property="twitter:title" content="Mikkel ALMONTE--RINGAUD" />
+    <meta
+      property="twitter:description"
+      content="Mikkel ALMONTE--RINGAUD's Portfolio"
+    />
+    <meta property="twitter:image" content="/og.png" />
+
+    <meta name="generator" content={Astro.generator} />
+  </head>
+  <body class="bg-#151515 text-white">
+    <slot />
+  </body>
+</html>
