feat: add fonts and icons

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import "@fontsource/geist/400";
+import "@fontsource/geist/900";
+import "@fontsource/geist-mono";
 import "../assets/fonts/array/index.css"; // Array
 ---
 
@@ -36,7 +39,7 @@ import "../assets/fonts/array/index.css"; // Array
 
     <meta name="generator" content={Astro.generator} />
   </head>
-  <body class="bg-#151515 text-white">
+  <body class="bg-#151515 text-white font-[Geist]">
     <slot />
   </body>
 </html>
