feat: add background texts

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,9 @@ import "../assets/fonts/array/index.css"; // Array
 
     <meta name="generator" content={Astro.generator} />
   </head>
-  <body class="bg-#151515 text-white font-[Geist]">
+  <body
+    class="bg-#151515 text-white font-[Geist] selection:text-#151515 selection:bg-#C6A0F6"
+  >
     <slot />
   </body>
 </html>
