--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,18 +48,26 @@ import LucideYoutube from "~icons/lucide/youtube";
       <img
         src="/favicon.svg"
         alt="Vexcited's Logo"
-        class="z-5 absolute -bottom-34px -right-16px size-100px"
+        class="z-5 absolute -bottom-34px -right-16px size-100px pointer-events-none select-none"
       />
     </div>
 
     <img
       src={Cross.src}
-      class="z-10 absolute top-10vh left-8vh pointer-events-none"
+      class="z-10 absolute top-10vh left-8vh pointer-events-none select-none"
     />
     <img
       src={Circle.src}
-      class="z-10 absolute top-44vh right-5vh pointer-events-none"
+      class="z-10 absolute top-44vh right-5vh pointer-events-none select-none"
     />
+
+    <div
+      class="absolute top-10vh inset-x-4vh items-center z-5 flex flex-col text-30vh leading-21.3vh font-900 text-#363A4F/15 tracking-wide pointer-events-none select-none"
+    >
+      <p>VEXCITED</p>
+      <p>VEXCITED</p>
+      <p>VEXCITED</p>
+    </div>
 
     <div
       class="z-4 absolute top-4vh h-74vh inset-x-4vh border-2 border-#C6A0F6 border-dashed rd-14px"
@@ -70,7 +78,9 @@ import LucideYoutube from "~icons/lucide/youtube";
     >
     </div>
 
-    <div class="leading-12vw font-[Array] font-700 text-17.55vw text-#C6A0F6">
+    <div
+      class="leading-12vw font-[Array] font-700 text-17.55vw text-#C6A0F6 select-none pointer-events-none"
+    >
       <p class="absolute bottom-0 blur-2xl z-2">vexcited</p>
       <p class="absolute bottom-0 z-0 mix-blend-plus-lighter">vexcited</p>
     </div>
