fix: background texts depending on viewport size

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ import LucideYoutube from "~icons/lucide/youtube";
     />
 
     <div
-      class="absolute top-10vh inset-x-4vh items-center z-5 flex flex-col text-30vh leading-21.3vh font-900 text-#363A4F/15 tracking-wide pointer-events-none select-none"
+      class="absolute top-4vh bottom-22vh inset-x-4vh justify-center items-center z-5 flex flex-col text-[min(16.5vw,30vh)] leading-[min(11.75vw,21.3vh)] font-900 text-#363A4F/15 tracking-wide pointer-events-none select-none"
     >
       <p>VEXCITED</p>
       <p>VEXCITED</p>
