feat: a bit more responsive on cards

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import LucideYoutube from "~icons/lucide/youtube";
     </div>
 
     <div
-      class="absolute top-13vh right-26vh z-20 rd-10px bg-#1E2030 p-32px rotate-4"
+      class="absolute max-[390px]:(inset-x-16px mx-auto) min-[1360px]:right-6vw z-20 rd-10px bg-#1E2030 p-32px rotate-4 max-[1360px]:left-14vw max-[900px]:bottom-10vh min-[900px]:top-13vh"
     >
       <div
         class="z-4 absolute inset-0 m-4% border-2 border-#C6A0F6 border-dashed rd-10px pointer-events-none"
@@ -86,7 +86,7 @@ import LucideYoutube from "~icons/lucide/youtube";
     </div>
 
     <div
-      class="mx-auto absolute flex -left-10vh items-center inset-0 w-fit pointer-events-none select-none z-10"
+      class="mx-auto absolute flex -left-50% min-[670px]:-left-10vh items-center inset-0 w-fit pointer-events-none select-none z-10"
     >
       <img class="h-full object-cover z-4" src={DuoToneMe.src} />
       <img
