--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,10 @@ import LucideTwitch from "~icons/lucide/twitch";
 import LucideYoutube from "~icons/lucide/youtube";
 ---
 
-<Layout>
+<Layout
+  title="Mikkel ALMONTE--RINGAUD"
+  description="Mikkel ALMONTE--RINGAUD's portfolio"
+>
   <div class="relative h-screen overflow-hidden">
     <div
       class="pointer-events-none fixed inset-0 z-50 bg-cover mix-blend-color-dodge"
