fix: add radicle logo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import DuoToneMe from "../assets/landing/duotone.png";
 import Grain from "../assets/grain.png";
 import Cross from "../assets/landing/cross.svg";
 import Circle from "../assets/landing/circle.svg";
-import LucideGithub from "~icons/lucide/github";
+import InternalRadicle from "~icons/internal/radicle";
 import LucideInstagram from "~icons/lucide/instagram";
 import LucideTwitch from "~icons/lucide/twitch";
 import LucideYoutube from "~icons/lucide/youtube";
@@ -16,7 +16,7 @@ import LucideYoutube from "~icons/lucide/youtube";
 >
   <div class="relative h-screen overflow-hidden">
     <div
-      class="pointer-events-none fixed inset-0 z-50 bg-cover mix-blend-color-dodge"
+      class="pointer-events-none fixed inset-0 z-50 bg-repeat mix-blend-color-dodge"
       style={`background-image: url(${Grain.src})`}
     >
     </div>
@@ -35,8 +35,8 @@ import LucideYoutube from "~icons/lucide/youtube";
       <p class="font-[Geist_Mono] tracking-wide text-#6E738D">@vexcited</p>
 
       <div class="flex gap-12px text-20px text-#C6A0F6 mt-16px">
-        <a target="_blank" href="https://github.com/Vexcited"
-          ><LucideGithub /></a
+        <a target="_blank" href="https://code.vexcited.com/"
+          ><InternalRadicle /></a
         >
         <a target="_blank" href="https://instagram.com/vexcitedoff"
           ><LucideInstagram /></a
