feat: wip blog page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,10 @@
 ---
+import "@fontsource/geist/300";
 import "@fontsource/geist/400";
+import "@fontsource/geist/600";
 import "@fontsource/geist/900";
-import "@fontsource/geist-mono";
+import "@fontsource/geist-mono/400";
+import "@fontsource/geist-mono/600";
 import "../assets/fonts/array/index.css"; // Array
 
 interface Props {
